# ray_tracing

./: Cargo.toml  README.adoc  index.html  justfile
src/: aabb.rs  camera.rs  cli.rs  geo.rs  gui.rs  lib.rs  main.rs  material.rs  onb.rs  pdf.rs  perlin.rs  rand_gen.rs  ray.rs  renderer.rs  resource.rs  scene.rs  texture.rs  types.rs  winit_egui.rs
