[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
progress = ["indicatif"]

[dependencies]
cfg-if = "1.0.0"
egui = "0.18"
egui-winit = { version = "0.18", features = ["links"], default-features = false }
log = "0.4.17"
nalgebra = "0.31"
pixels = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.12.0"
egui-wgpu = { path = "../egui-wgpu"}
image = "0.24.2"
instant = "0.1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
# Should use the same version as that in pixels's dependency tree
wgpu = { version = "0.12", features = ["webgl"]}
console_log = "0.2"
getrandom = { version = "0.2.6", features = ["js"] }
instant = { version = "0.1.12", features = ["stdweb", "wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
wgpu = { version = "0.12"}
pollster = "0.2.5"
rayon = "1.5.3"
getrandom = "0.2.6"
indicatif = {version = "0.16.2", optional = true}
