[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[features]
web = ["window"]
default = []
progress = ["indicatif"]
window = ["wgpu"]
local = ["window", "rayon", "progress", "pollster"]
cli = ["rayon", "progress", "clap"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
nalgebra = "0.31"

image = "0.24.2"
instant = "0.1.12"

egui = "0.18"
egui-winit = { version = "0.18", features = ["links"], default-features = false }
pixels = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.12.0"
egui-wgpu = { path = "../egui-wgpu"}
derivative = "2.2.0"
float_eq = "1.0.0"
itertools = "0.10.3"
clap = {version = "3.1.18", optional = true, features = ["derive"]}


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
# Should use the same version as that in pixels's dependency tree
wgpu = { version = "0.12", features = ["webgl"]}
console_log = "0.2"
getrandom = { version = "0.2.6", features = ["js"] }
instant = { version = "0.1.12", features = ["stdweb", "wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
rayon = {version = "1.5.3", optional = true}
getrandom = "0.2.6"
indicatif = {version = "0.16.2", optional = true}
wgpu = { version = "0.12", optional = true}
pollster = { version = "0.2.5", optional = true}


