[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3


[features]
web = ["window", "wgpu/webgl"]
default = []
progress = ["indicatif"]
window = ["wgpu", "egui-wgpu", "egui", "egui-winit", "pixels", "winit", "winit_input_helper"]
local = ["window", "rayon", "progress", "pollster", "rand"]
cli = ["rayon", "progress", "clap", "rand"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
nalgebra = "0.31"

image = { version = "0.24.2", default-features = false,  features = ["png", "jpeg"]}
instant = "0.1.12"

egui = {version = "0.18", optional = true}
egui-winit = { version = "0.18", features = ["links"], default-features = false, optional = true}
pixels = {version = "0.9.0", optional = true}
winit = {version = "0.26.1", optional = true}
winit_input_helper = { version = "0.12.0", optional = true}
egui-wgpu = { path = "../egui-wgpu", optional = true}
derivative = "2.2.0"
float_eq = "1.0.0"
itertools = "0.10.3"
clap = {version = "3.1.18", optional = true, features = ["derive"]}
anyhow = "1.0.57"
strum = {version = "0.24.0", features = ["derive"]}

rand = { version = "0.8.5", optional=true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
# Should use the same version as that in pixels's dependency tree
console_log = "0.2"
getrandom = { version = "0.2.6", features = ["js"] }
instant = { version = "0.1.12", features = ["stdweb", "wasm-bindgen"] }
reqwest = {version = "0.11.10"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
rayon = {version = "1.5.3", optional = true}
indicatif = {version = "0.16.2", optional = true, features = ["rayon"]}
wgpu = { version = "0.12", optional = true}
pollster = { version = "0.2.5", optional = true}


